--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,19 +1,15 @@
 
-<div class="hero_image"></div>
-
-<a href="/user/<%= @user.id %>"><h1><%= @user.first_name %> <%= @user.last_name %></h1></a>
-
-<form action="/user/<%= @user.id %>" method="POST">
+<form action="/user/<%= @this_user.id %>" method="POST">
 	<input type="hidden" name="_method" value="PUT">
-	<input type="text" name="birthday" value="<%= @user.birthday %>">
-	<input type="text" name="email" value="<%= @user.email %>">
-	<input type="text" name="password" value="<%= @user.password %>">
+	<input type="text" name="birthday" value="<%= @this_user.birthday %>">
+	<input type="text" name="email" value="<%= @this_user.email %>">
+	<input type="text" name="password" value="<%= @this_user.password %>">
 	<button type="submit">Edit</button>
 </form>
 
 
 # When someone submits this form, my app in app.rb is going to look for /user/:id and submit a delete request 
-<form action="/user/<%= @user.id %>" method="POST">
+<form action="/user/<%= @this_user.id %>" method="POST">
 	<input type="hidden" name="_method" value="DELETE">
 	<button type="submit">Delete</button>
 </form>
