--- a/views/logout.erb
+++ b/views/logout.erb
@@ -1,4 +1,4 @@
 
 <form method="POST" action="/user/logout">
-    <button type="submit" style="width:50px;height:50px;background-color:light-blue;">Goodbye!</button>
+    <button type="submit">Goodbye. See you soon!</button>
 </form>
