--- a/views/post.erb
+++ b/views/post.erb
@@ -1,19 +1,23 @@
-
-<div class="hero_image"></div>
+# posts should open up to
 
 <h2>Post</h2>
 <div class="text">
-	<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.</p>
+	<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores provident, similique sunt in culpa qui officia deserunt mollitia animi. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.</p>
 </div>
 
 <div class="row">
 	<div class="gallery">		
-	<% @post.each do |post| %>
-		<h1> <%= post.name %> </h1>
-		<h1> <%= post.content %> <h1>
-		<h1> <%= post.user_id %> </h1>
-		<img class="responsive-img" src="<%= #.image %>">
+	<% @posts.each do |posts| %>
+		<h1> <%= @posts.name %> </h1>
+		<h1> <%= @posts.content %> <h1>
+		<h1> <%= @posts.user_id %> </h1>
+		# <img class="responsive-img" src="<%= #.image %>">
 	<% end %>  
 	</div>
 </div>
 
+
+def self.search(search)
+	where("name LIKE ?", "%#{search}%") 
+	where("content LIKE ?", "%#{search}%")
+end
