--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,13 +1,13 @@
 
-<div class="hero_image"></div>
-
 <h1>Signup</h1>
 
 <form action="/user/new" method="POST">
-	<input type="text" name="first_name" placeholder="First Name">
-	<input type="text" name="last_name" placeholder="Last Name">
-	<input type="text" name="birthday" placeholder="Birthday">
-	<input type="email" name="email" placeholder="email">
-	<input type="text" name="password" value="Password">
+	<input type="text" name="first_name" placeholder="first_name">
+	<input type="text" name="last_name" placeholder="last_name">
+	<input type="text" name="birthday" placeholder="birthday">
+	<input type="text" name="email" placeholder="email">
+	<input type="text" name="password" placeholder="password">
 	<button type="submit">Submit</button>
 </form>
+
+# create a new page? redicrect to 'thank you page' - code in "thank you for signing up" message
