--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,13 +1,13 @@
 
-<h1>Signup</h1>
+<h1>Welcome to TravelBlog!</h1>
 
-<form action="/user/new" method="POST">
-	<input type="text" name="first_name" placeholder="first_name">
-	<input type="text" name="last_name" placeholder="last_name">
+<h2>Signup</h2>
+
+<form action="/signup" method="POST">
+	<input type="text" name="first_name" placeholder="first name">
+	<input type="text" name="last_name" placeholder="last name">
 	<input type="text" name="birthday" placeholder="birthday">
 	<input type="text" name="email" placeholder="email">
 	<input type="text" name="password" placeholder="password">
 	<button type="submit">Submit</button>
 </form>
-
-# create a new page? redicrect to 'thank you page' - code in "thank you for signing up" message
