--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,17 +1,12 @@
 
+
 <h1> Welcome to TravelBlog <%= @user.first_name %> </h1>
 
 
-#when redirected to blogger page, will show all the works by this blogger.
-<h2>My Stuff</h2>
-
-<div class="row">
-	<div class="gallery">		
-	<% @posts.each do |posts| %>
-		<h1> <%= @posts.post_name %> </h1>
-		<h1> <%= @posts.post_content %> <h1>
-		<h1> <%= @posts.user_id %> </h1>
-	
+	<% @posts.each do |a| %>
+		<h1> <%= a.post_name %> </h1>
+		<h5> <%= a.post_content %> </h5>
+		<h5> <%= a.user_id %> User ID # </h5>
+		<img class="responsive-img" src="/image/beijing.jpg">
 	<% end %>  
-	</div>
-</div>
+	
