--- a/views/post.erb
+++ b/views/post.erb
@@ -1,15 +1,15 @@
 # posts should open up to
 
-<h2>Post</h2>
 
 <div class="row">
 	<div class="gallery">		
-	<% @user.each do |post| %>
-		<h1> <%= @user.post_name %> </h1>
-		<h1> <%= @user.post_content %> </h1>
-		<h1> <%= @user.user_id %> </h1>
-		<img class="responsive-img" src="<%= beijing.image %>">
-	<% end %>  
+	<% @posts.each do |a| %>
+		<h1> <%= a.post_name %> </h1>
+		<h5> <%= a.post_content %> </h5>
+		
+		<img class="responsive-img" src="/image/beijing.jpg">
+    <% end %> 
+    
 	</div>
 </div>
 
