--- a/views/profile.erb
+++ b/views/profile.erb
@@ -2,11 +2,18 @@
 
 <h1> Welcome to TravelBlog <%= @user.first_name %> </h1>
 
+    <button type="submit" >  <a class="my-link" href="/new_post">New Post</a></button>
+  
+    <button type="submit" >  <a class="my-link" href="/edit">Edit</a></button>
+    
+    <br>
 
 	<% @posts.each do |a| %>
 		<h1> <%= a.post_name %> </h1>
 		<h5> <%= a.post_content %> </h5>
-		<h5> <%= a.user_id %> User ID # </h5>
+		<h5>User ID: </h5> <h5> <%= a.user_id %></h5>
 		<img class="responsive-img" src="/image/beijing.jpg">
-	<% end %>  
+    <% end %> 
+    
+
 	
