created submit page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
 	<div id="title">
 			<div id="title-text">
 				<h1>TravelBlog</h1>
-				<p><em>Blogging your adventures</em></p>
+				# <p><em>Blogging your adventures</em></p>
 			</div>
 		</div>
 	</div>
