--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -1,15 +1,7 @@
 
-<form method="POST" action="/post/new_post">
-    <input type="text" name="post_name" placeholder="Post name">
-    <input type="text" name="user_id" placeholder="User ID">
-    <input type="image" src="img_submit.jpg" alt="Submit" width="48" height="48">
-
-</form>
-
-<form method="POST" action="/post/new_post">
-    <textarea name="myTextBox" cols="50" rows="20">
-
-    </textarea>
+<form method="POST" action="/post/create/new">
+    <input type="text" name="post_name" placeholder="Title">
+    <textarea name="post_content" cols="50" rows="20"></textarea>
 
     <button type="submit">Submit</button>
 </form>
