--- a/views/submit.erb
+++ b/views/submit.erb
@@ -1,4 +1,8 @@
 
 <h2>Thank you for your submission <%= @user.first_name %>! </h2>
 
-<h3>You can view it at <%= @post %> </h3>
+
+<form method="POST" action="/post/new_post">
+    <input type="text" name="user_id">
+<button type="submit">Submit</button>
+</form>
