--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,37 +20,26 @@
 		
 	<header>
 	<div class="container">
-	<div id="title">
-			<div id="title-text">
-				<h1>TravelBlog</h1>
-				# <p><em>Blogging your adventures</em></p>
-			</div>
-		</div>
+		<h1><img class="responsive-img" src="/image/logo.jpg">
+		</h1>
 	</div>
-		<nav class="navbar navbar-expand navbar-dark bg-dark">
-		
+	
+	<nav class="navbar navbar-expand navbar-dark bg-dark">	
 		<div class="collapse navbar-collapse" id="nav1">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="/index">Login</a>
-					<form method="POST" action="/user/login">
-					<input type="email" name="email" placeholder="email">
-					<input type="password" name="password" placeholder="password">
-					<button type="submit" >Submit</button>
-					</form>
+					<a class="nav-link" href="/home">Home</a>
+					<a class="nav-link" href="/about">About Us</a>
 				</li>  
 			</ul>
-			
-			<form class="form-inline my-2 my-md-0">
-				<input class="form-control" type="text" placeholder="Search TravelBlog">
-			</form>
 
+		<form class="form-inline my-2 my-md-0">
+			<input class="form-control" type="text" placeholder="Search TravelBlog">
+		</form>	
 		</div>
-		</nav>
-		
+	</nav>
+
 	</header>
-
-
 	</body>
 </html>
 
