--- a/views/profile.erb
+++ b/views/profile.erb
@@ -5,7 +5,8 @@
     <button type="submit" >  <a class="my-link" href="/new_post">New Post</a></button>
   
     <button type="submit" >  <a class="my-link" href="/edit">Edit</a></button>
-    
+	
+	<button type="logout" >  <a class="my-link" href="/logout">Logout</a></button>
     <br>
 
 	<% @posts.each do |a| %>
