--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,17 @@
 
-<h1>Welcome to TravelBlog!</h1>
+<h4>Welcome to TravelBlog</h4>
 <h5>Please signup for a new account or login to access your account.</h5>
 
-
-<a href="/signup">Signup</a>
+<div class=nav1">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <form method="POST" action="/user/login">
+            <input type="email" name="email" placeholder="email">
+            <input type="password" name="password" placeholder="password">
+            <button type="submit" >Submit</button>
+            <button type="reset" value="Reset">Reset</button>
+            </form>
+        </li>  
+    </ul>
+</div>
+		
