--- a/views/login.erb
+++ b/views/login.erb
@@ -2,5 +2,6 @@
 <form method="POST" action="/user/login">
     <input type="email" name="email" placeholder="email">
     <input type="password" name="password" placeholder="password">
+    <input type="reset" value="Reset" placeholder="reset"> 
     <button type="submit"></button>
 </form>
