--- a/views/profile.erb
+++ b/views/profile.erb
@@ -11,8 +11,8 @@
 
 	<% @posts.each do |a| %>
 		<h1> <%= a.post_name %> </h1>
+		<h5>User ID: <%= a.user_id %></h5>
 		<h5> <%= a.post_content %> </h5>
-		<h5>User ID: </h5> <h5> <%= a.user_id %></h5>
-		<img class="responsive-img" src="/image/beijing.jpg">
+		<img class="responsive-img" src="/image/leisure.jpg">
     <% end %> 
     
