--- a/views/about.erb
+++ b/views/about.erb
@@ -8,13 +8,14 @@
 </div>
 
 <div class="row">
-	<div class="col_s4">
-	  <img class="responsive-img" id="india" src="image/india.jpg">
-	  <img class="responsive-img" id="hungary" src="image/hungary.jpg">
+	<div class="column">
+	  <img class="responsive-img" id="fitness" src="image/fitness.jpg">
+	  <img class="responsive-img" id="solo2" src="image/solo2.jpg">
 	  <img class="responsive-img" id="paris" src="image/paris.jpg"> 
 	</div>
 </div>
 
+<br>
 <div class="text">
 	<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.</p>
 </div>
