--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,11 +6,10 @@
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-
-        ͏<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Allura" rel="stylesheet">
-
-	
+		<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 		<link rel="stylesheet" href="/css/style.css">
@@ -19,7 +18,7 @@
 	<body>
 		
 	<header>
-	<div class="container">
+	<div class="logo-container">
 		<h1><img class="responsive-img" src="/image/logo.jpg">
 		</h1>
 	</div>
