added search button

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,8 +19,7 @@
 		
 	<header>
 	<div class="logo-container">
-		<h1><img class="responsive-img" src="/image/logo.jpg">
-		</h1>
+		<img class="responsive-img" src="/image/logo.jpg">
 	</div>
 	
 	<nav class="navbar navbar-expand navbar-dark bg-dark">	
@@ -33,7 +32,7 @@
 			</ul>
 
 		<form class="form-inline my-2 my-md-0">
-			<input class="form-control" type="text" placeholder="Search TravelBlog">
+			<input class="form-control" type="text" placeholder="Search TravelBlog"><a class="nav-link" href="/search">Search</a>
 		</form>	
 		</div>
 	</nav>
