--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,8 @@
 <h4>Welcome to TravelBlog</h4>
 <h5>Please signup for a new account or login to access your account.</h5>
 
+
+<a href="/signup">Signup</a> 
 <div class=nav1">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
