--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -1,7 +1,11 @@
 
 <form method="POST" action="/post/create/new">
-    <input type="text" name="post_name" placeholder="Title">
-    <textarea name="post_content" cols="50" rows="20"></textarea>
+    <div>
+        <input type="text" name="post_name" placeholder="Title">
+    </div>
+    <div>
+        <textarea name="post_content" cols="50" rows="10"></textarea>
 
-    <button type="submit">Submit</button>
+        <button type="submit">Submit</button>
+    </div>
 </form>
