--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,12 @@
 
-<h4>Welcome to TravelBlog</h4>
+<h3>Welcome to TravelBlog</h3>
 <h5>Please signup for a new account or login to access your account.</h5>
 
+<div class="login_info">
+    <a href="/Login">Login</a> 
+    <a href="/signup">Signup</a> 
+</div>
 
-<a href="/signup">Signup</a> 
 <div class=nav1">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -16,4 +19,36 @@
         </li>  
     </ul>
 </div>
-		
+
+
+<div class="slideshow-content" style="max-width:500px">
+  <img class="mySlides" src="/image/venice.jpg">
+  <img class="mySlides" src="/image/beach2.jpg">
+  <img class="mySlides" src="/image/peru.jpg">
+  <img class="mySlides" src="/image/beijing.jpg">
+  <img class="mySlides" src="/image/fitness2.jpg">
+</div>
+
+<div class="text">
+	<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.</p>
+</div>
+
+<script>
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";  
+        }
+        myIndex++;
+        if (myIndex > x.length) {myIndex = 1}    
+        x[myIndex-1].style.display = "block";  
+        setTimeout(carousel, 3000); 
+    }
+</script>
+
+</body>
+</html>
