--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -1,11 +1,18 @@
 
+<h4>Write your post below and submit when done.</h4>
+
 <form method="POST" action="/post/create/new">
     <div>
         <input type="text" name="post_name" placeholder="Title">
     </div>
-    <div>
-        <textarea name="post_content" cols="50" rows="10"></textarea>
+    <div class="textname">
+        <textarea type="text" name="post_content" cols="50" rows="10"></textarea>
 
+    </div>
+    <div>
+        <img id="myPicture" src="//:0">
+    </div>
+    <div class="textname">
         <button type="submit">Submit</button>
     </div>
 </form>
