--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,7 +19,7 @@
 		
 	<header>
 	<div class="logo-container">
-		<img class="responsive-img" src="/image/logo.jpg">
+		<img class="logo-pix" src="/image/logo.jpg" id="mylogo">
 	</div>
 	
 	<nav class="navbar navbar-expand navbar-dark bg-dark">	
@@ -41,4 +41,18 @@
 	</body>
 </html>
 
+
 <%= yield %>
+
+
+<footer class="page-footer">
+	<div class="container">
+	<div id="copyright" class="col-left">© Copyright TravelBlog. All rights reserved.</div>
+		<div class="row">
+		<div class="mediainfo container">
+			<a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+			<a href="https://twitter.com/" class="fa fa-twitter"></a>
+			<a href="https://www.instagram.com/" class="fa fa-instagram"></a>  
+		</div>
+	</div>
+</footer>
