added an image upload

--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -5,13 +5,15 @@
     <div>
         <input type="text" name="post_name" placeholder="Title">
     </div>
+    <br>
     <div class="textname">
         <textarea type="text" name="post_content" cols="50" rows="10"></textarea>
 
     </div>
-    <div>
-        <img id="myPicture" src="//:0">
+    <div class="textname">
+    <input name="image" type="file" id="fileName" accept="image/*" onchange="validateFileType()"/>
     </div>
+ 
     <div class="textname">
         <button type="submit">Submit</button>
     </div>
