--- a/views/thankyou.erb
+++ b/views/thankyou.erb
@@ -1,3 +1,10 @@
 
-
 <h3>Thank you for signing up <%= @user.first_name %>!</h3>
+
+<div class="row">
+	<div class="column">
+	  <img class="responsive-img" id="bangkok" src="image/bangkok.jpg">
+	  <img class="responsive-img" id="beach" src="image/beach.jpg">  
+	  <img class="responsive-img" id="rome" src="image/rome.jpg">  
+	</div>
+</div>
