--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,7 @@ img{
     height: 250px;
     border-radius: 8px;
     margin-left: 10px;
+    margin-bottom: 20px;
 }
 
 #mylogo {
@@ -77,4 +78,9 @@ img{
 #myPicture {
     height: 300px;
     width: 450px;
+}
+
+.column {
+    margin-bottom: 10px;
+    margin-left: 20px;
 }
