--- a/views/profile.erb
+++ b/views/profile.erb
@@ -15,6 +15,6 @@
 		<h1> <%= a.post_name %> </h1>
 		<h5>User ID: <%= a.user_id %></h5>
 		<h5> <%= a.post_content %> </h5>
-		<img class="responsive-img" src="/image/leisure.jpg">
+		<img class="responsive-img" src="/image/spain.jpg">
     <% end %> 
     
