--- a/views/logout.erb
+++ b/views/logout.erb
@@ -1,2 +1,10 @@
 
 <h3>You're logged out. See you again soon!</h3>
+
+<div class="row">
+    <div class="column">
+        <img class="responsive-img" id="dusk" src="image/dusk.jpg">  
+        <img class="responsive-img" id="canal" src="image/canal.jpg">
+        <img class="responsive-img" id="fitness" src="image/fitness.jpg">  
+	</div>
+</div>
