--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <h3>Welcome to TravelBlog</h3>
 <h5>Please signup for a new account or login to access your account.</h5>
 
-<div class="login_info">
+<div class="login-info">
     <a href="/Login">Login</a> 
     <a href="/signup">Signup</a> 
 </div>
@@ -13,7 +13,7 @@
             <form method="POST" action="/user/login">
             <input type="email" name="email" placeholder="email">
             <input type="password" name="password" placeholder="password">
-            <button type="submit" >Submit</button>
+            <button type="submit" >Login</button>
             <button type="reset" value="Reset">Reset</button>
             </form>
         </li>  
@@ -27,6 +27,7 @@
   <img class="mySlides" src="/image/peru.jpg">
   <img class="mySlides" src="/image/beijing.jpg">
   <img class="mySlides" src="/image/fitness2.jpg">
+  <img class="mySlides" src="/image/clear.jpg">
 </div>
 
 <div class="text">
