--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,7 +19,7 @@
 		
 	<header>
 	<div class="logo-container">
-		<img class="logo-pix" src="/image/logo.jpg" id="mylogo">
+		<img class="logo-pix" src="/image/logo.png" id="mylogo">
 	</div>
 	
 	<nav class="navbar navbar-expand navbar-dark bg-dark">	
@@ -32,7 +32,9 @@
 			</ul>
 
 		<form class="form-inline my-2 my-md-0">
-			<input class="form-control" type="text" placeholder="Search TravelBlog"><a class="nav-link" href="/search">Search</a>
+			<input class="form-control" type="text" placeholder="">
+			<a class="nav-link" href="/search">Search</a>
+
 		</form>	
 		</div>
 	</nav>
