--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 <h5>Please signup for a new account or login to access your account.</h5>
 
 <div class="login-info">
-    <a href="/Login">Login</a> 
+    <a href="/login">Login</a> 
     <a href="/signup">Signup</a> 
 </div>
 
