--- a/views/login.erb
+++ b/views/login.erb
@@ -1,12 +1,7 @@
 
-<form method="POST" action="/user/login">
-    <input type="email" name="email" placeholder="email">
-    <input type="password" name="password" placeholder="password">
-    <button type="submit" >Login</button>
+<form method="POST" action="/login">
+    <input type="text" name="email" placeholder="email">
+    <input type="text" name="password" placeholder="password">
+    <button type="submit">Login</button>
 </form>
 
-# <form method="POST" action="/user/login">
-#     <input type="email" name="email" placeholder="email">
-#     <input type="password" name="password" placeholder="password">
-#     <button type="submit"></button>
-# </form>
