added post button

--- a/views/post.erb
+++ b/views/post.erb
@@ -1,4 +1,10 @@
 
+# <form action="/post/user_id" method="POST">
+# 	<input type="hidden" name="_method" value="PUT">
+# 	<input type="text" name="post_name" value="<%= a.post_name %>">
+# 	<input type="text" name="post_content" value="<%= a.post_content %>">
+# 	<button type="submit">Edit</button>
+# </form>
 
 <div class="row">
 	<div class="gallery">		
