--- a/views/profile.erb
+++ b/views/profile.erb
@@ -2,6 +2,8 @@
 
 <h3> Welcome to TravelBlog <%= @user.first_name %> </h3>
 
+	<button type="submit" >  <a class="my-link" href="/post">Post</a></button>
+	
     <button type="submit" >  <a class="my-link" href="/new_post">New Post</a></button>
   
     <button type="submit" >  <a class="my-link" href="/edit">Edit</a></button>
@@ -10,11 +12,3 @@
 
 	<button type="delete" >  <a class="my-link" href="/delete">Delete</a></button>
 	<br>
-	
-	<% @posts.each do |a| %>
-		<h1> <%= a.post_name %> </h1>
-		<h5>User ID: <%= a.user_id %></h5>
-		<h5> <%= a.post_content %> </h5>
-		<img class="responsive-img" src="/image/spain.jpg">
-    <% end %> 
-    
