make changes to edit

--- a/views/signup.erb
+++ b/views/signup.erb
@@ -8,7 +8,7 @@
 	<input type="text" name="last_name" placeholder="last name">
 	<input type="text" name="birthday" placeholder="birthday">
 	<input type="text" name="email" placeholder="email">
-	<input type="text" name="password" placeholder="password">
+	<input type="text" name="password" placeholder="password" field="hidden">
 	<button type="submit">Submit</button>
 </form>
 
