--- a/views/index.erb
+++ b/views/index.erb
@@ -1,25 +1,13 @@
 
-<h3>Welcome to TravelBlog</h3>
-<h5>Please signup for a new account or login to access your account.</h5>
-
+    <% if @user != session[:id] %>
+        <h5>Welcome <%= @user.first_name %></h5>
+    <% else %>
+        <h5>Please signup for a new account or login to access your account.</h5>
     <div class="login-info">
-        <a href="/login">Login</a> 
+        <a href="/user/login">Login</a> 
         <a href="/signup">Signup</a> 
     </div>
-
-    <div class=nav1"> 
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <form method="POST" action="/user/login">
-                    <input type="email" name="email" placeholder="email">
-                    <input type="password" name="password" placeholder="password">
-                    <button type="submit" >Login</button>
-                    <button type="reset" value="Reset">Reset</button>
-                </form>
-            </li>  
-        </ul>
-    </div>
-
+    <% end %>
 
     <div class="slideshow-content" style="max-width:500px">
         <img class="mySlides" src="/image/venice.jpg">
