--- a/views/login.erb
+++ b/views/login.erb
@@ -1,5 +1,5 @@
 
-<form method="POST" action="/login">
+<form method="POST" action="/user/login">
     <input type="text" name="email" placeholder="email">
     <input type="text" name="password" placeholder="password">
     <button type="submit">Login</button>
