--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,8 +1,6 @@
 
 
 <h3> Welcome to TravelBlog <%= @user.first_name %> </h3>
-
-	<button type="submit" >  <a class="my-link" href="/post">Post</a></button>
 	
     <button type="submit" >  <a class="my-link" href="/new_post">New Post</a></button>
   
@@ -12,3 +10,20 @@
 
 	<button type="delete" >  <a class="my-link" href="/delete">Delete</a></button>
 	<br>
+
+
+	<% @posts.each do |post| %>
+		<h2><%= post.post_name %></h2>
+		<p><%= post.post_content %></p>
+		<p><%= post.user.first_name %> <%= post.user.last_name %></p>
+		<p><a href="/profile/<%= post.id %>/edit"> Edit</a></p>
+		<form action="/profile/<%= post.id %>" method="POST">
+    		<input type="hidden" name="_method" value="DELETE">	
+    		<button type="submit">Delete</button>
+		</form>
+		
+		<% end %>
+
+
+			<h1> <%= @user.id %></h1>
+
